--- a/DeviceManager/Views/Shared/_Layout.cshtml
+++ b/DeviceManager/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li> *@
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Technician" asp-action="Index">Technician</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Devices" asp-action="Index">Devices</a>
                         </li>
                     </ul>
