--- a/DeviceManager/Views/Devices/Delete.cshtml
+++ b/DeviceManager/Views/Devices/Delete.cshtml
@@ -1,25 +1,20 @@
 ﻿@model DeviceManager.Models.Device
 
-<h2>Delete Device</h2>
+<div class="container mt-5">
+    <div class="card shadow-sm p-4 border-0">
+        <h3>Delete Device</h3>
+        <p>Are you sure you want to delete this device?</p>
 
-<p>Are you sure you want to delete this device?</p>
+        <table class="table table-bordered">
+            <tr><th>Name</th><td>@Model.Name</td></tr>
+            <tr><th>Type</th><td>@Model.Type</td></tr>
+            <tr><th>Status</th><td>@Model.Status</td></tr>
+            <tr><th>Technician</th><td>@Model.Technician?.FullName ?? "Unassigned"</td></tr>
+        </table>
 
-<table class="table table-bordered">
-    <tr>
-        <th>Name</th>
-        <td>@Model.Name</td>
-    </tr>
-    <tr>
-        <th>Type</th>
-        <td>@Model.Type</td>
-    </tr>
-    <tr>
-        <th>Status</th>
-        <td>@Model.Status</td>
-    </tr>
-</table>
-
-<form method="post">
-    <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Back</a>
-</form>
+        <form method="post">
+            <button type="submit" class="btn btn-danger">Delete</button>
+            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        </form>
+    </div>
+</div>
