--- a/DeviceManager/Views/Devices/Create.cshtml
+++ b/DeviceManager/Views/Devices/Create.cshtml
@@ -13,21 +13,21 @@
 
             <div class="mb-3">
                 <label asp-for="Name" class="form-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" placeholder="Enter Device Name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
 
             <div class="mb-3">
                 <label asp-for="Type" class="form-label"></label>
-                <input asp-for="Type" class="form-control" />
+                <input asp-for="Type" class="form-control" placeholder="E.g Phone, Laptop" />
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
 
 
             <div class="mb-3">
                 <label asp-for="SerialNumber" class="form-label"></label>
-                <input asp-for="SerialNumber" class="form-control" />
+                <input asp-for="SerialNumber" class="form-control" placeholder="Enter Device Serial Number" />
                 <span asp-validation-for="SerialNumber" class="text-danger"></span>
             </div>
 
