--- a/DeviceManager/Views/Technician/Index.cshtml
+++ b/DeviceManager/Views/Technician/Index.cshtml
@@ -30,14 +30,11 @@
                                 <td>
                                     <div class="d-flex flex-wrap gap-2">
                                         <a asp-action="Details" asp-route-id="@t.Id" class="btn btn-info btn-sm d-flex align-items-center">
-                                            <i class="bi bi-eye me-1"></i> Details
-                                        </a>
+                                            <i class="bi bi-eye me-1"></i></a>
                                         <a asp-action="Edit" asp-route-id="@t.Id" class="btn btn-primary btn-sm d-flex align-items-center">
-                                            <i class="bi bi-pencil me-1"></i> Edit
-                                        </a>
+                                            <i class="bi bi-pencil me-1"></i></a>
                                         <a asp-action="Delete" asp-route-id="@t.Id" class="btn btn-danger btn-sm d-flex align-items-center">
-                                            <i class="bi bi-trash me-1"></i> Delete
-                                        </a>
+                                            <i class="bi bi-trash me-1"></i> </a>
                                     </div>
                                 </td>
                             </tr>
