--- a/DeviceManager/Views/Devices/Edit.cshtml
+++ b/DeviceManager/Views/Devices/Edit.cshtml
@@ -18,11 +18,15 @@
             </div>
 
 
-            <div class="mb-3">
-                <label asp-for="Type" class="form-label"></label>
-                <input asp-for="Type" class="form-control" />
-                <span asp-validation-for="Type" class="text-danger"></span>
+            <div class="col-md-6">      
+                <label asp-for="DeviceTypeId" class="form-label">Device Type</label>
+                <select asp-for="DeviceTypeId" asp-items="@(ViewBag.DeviceTypes as SelectList)" class="form-select">
+                    <option value="0">Choose type</option>
+                </select>
+                <span asp-validation-for="DeviceTypeId" class="text-danger"></span>
             </div>
+
+
 
 
             <div class="mb-3">
