--- a/DeviceManager/Views/Home/Index.cshtml
+++ b/DeviceManager/Views/Home/Index.cshtml
@@ -114,7 +114,7 @@
 
     <!-- Technician Workload -->
     <div class="card shadow-sm mb-4">
-        <div class="card-header">
+        <div class="card-header text-white bg-warning">
             <strong>Technician Workload</strong>
         </div>
         <div class="card-body p-0">
