--- a/DeviceManager/Views/Technician/Edit.cshtml
+++ b/DeviceManager/Views/Technician/Edit.cshtml
@@ -6,8 +6,8 @@
             <h3 class="mb-0"><i class="bi bi-person-lines-fill"></i> Edit Technician</h3>
         </div>
 
-        ```
         <form asp-action="Edit" method="post">
+            @Html.AntiForgeryToken()
             <input type="hidden" asp-for="Id" />
 
             <div class="mb-3">
@@ -35,6 +35,4 @@
             </div>
         </form>
     </div>
-    
-
 </div>
