--- a/DeviceManager/Views/Devices/Index.cshtml
+++ b/DeviceManager/Views/Devices/Index.cshtml
@@ -49,7 +49,7 @@
                                     }
                                     else if (d.Status == "Inactive")
                                     {
-                                        <span class="badge bg-warning text-dark">@d.Status</span>
+                                        <span class="badge bg-danger text-white">@d.Status</span>
                                     }
                                 </td>
                                 <td>@(d.Technician != null ? d.Technician.FullName : "Unassigned")</td>
