--- a/DeviceManager/Views/_ViewImports.cshtml
+++ b/DeviceManager/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DeviceManager
 @using DeviceManager.Models
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
