--- a/DeviceManager/Views/Devices/Create.cshtml
+++ b/DeviceManager/Views/Devices/Create.cshtml
@@ -47,7 +47,7 @@
 
 
             <div class="mb-3">
-                <label asp-for="TechnicianId" class="form-label"></label>
+                <label asp-for="Technician" class="form-label"></label>
                 <select asp-for="TechnicianId" asp-items="ViewBag.Technicians" class="form-select">
                     <option value="0">Unassigned</option>
                 </select>
