--- a/DeviceManager/Views/Shared/_Layout.cshtml
+++ b/DeviceManager/Views/Shared/_Layout.cshtml
@@ -52,10 +52,10 @@
                             </form>
                         </div>
                     }
-                    else
+                   @*  else
                     {
                         <a class="btn btn-primary btn-sm" asp-area="Identity" asp-page="/Account/Login">Login</a>
-                    }
+                    } *@
                 </div>
 
             </div>
