--- a/DeviceManager/Views/Account/Register.cshtml
+++ b/DeviceManager/Views/Account/Register.cshtml
@@ -42,7 +42,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Register</button>
-    <a asp-action="Login" asp-controller="Account" class="btn btn-link">Back to login</a>
+    <a asp-action="Login" asp-controller="Account" class="btn btn-secondary">Back to login</a>
 </form>
 
 @section Scripts {
