--- a/DeviceManager/Views/AdminDashboard/Index.cshtml
+++ b/DeviceManager/Views/AdminDashboard/Index.cshtml
@@ -41,7 +41,7 @@
 
     <div class="d-flex gap-3">
         <a asp-controller="Account" asp-action="Register" class="btn btn-primary">Manage User</a>
-        <a asp-controller="Devices" asp-action="Index" class="btn btn-secondary">Manage Roles</a>
+        <a asp-controller="Users" asp-action="Index" class="btn btn-secondary">Manage Roles</a>
     </div>
 
 </div>
